# flantastic_backend

./: pyproject.toml
flantastic_backend/: runserver.py
flantastic_backend/cli/: app_shell.py
flantastic_backend/flantastic_backend/: __init__.py  app.py  config.py
flantastic_backend/flantastic_backend/api/auth/: basic_auth.py  token.py
flantastic_backend/flantastic_backend/api/v1/: bakeries_routes.py  basic_auth.py  routes.py  users_routes.py  votes_routes.py
flantastic_backend/flantastic_backend/models/: __init__.py  bakeries_rates.py  bakery.py  role.py  user.py  users.py  vote.py
tests/: test_flantastic_backend.py
